# Auto-Replay-Uploader

./: .gitignore  Cargo.toml  LICENSE  Readme.md  build.rs
.github/workflows/: release.yml
src/: auth.rs  config.rs  icon.rs  main.rs  startup.rs  uploader.rs  watcher.rs
