[package]
name = "erdos-auto-uploader"
version = "1.1.2"
edition = "2024"
description = "Zero-idle-CPU file watcher"
license = "GPL-3.0-or-later"

[[bin]]
name = "erdos-auto-uploader"
path = "src/main.rs"

[dependencies]
# File system watching — uses ReadDirectoryChangesW on Windows (zero polling, event-driven)
notify = "8.2.0"

# System tray icon
tray-icon = "0.21.3"

# Context menu for the tray
muda = "0.17.1"

# Windowing / Win32 message pump (we never show a window, just need the pump).
# rwh_06 enables raw-window-handle v0.6 compatibility required by tray-icon.
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

# HTTP client for multipart uploads — blocking keeps the worker thread simple
reqwest = { version = "0.13.2", features = ["multipart", "blocking"] }

# PNG decoding for the embedded tray icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Config serialization
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"

# Error handling
anyhow = "1"

# Logging
log4rs = { version = "1", features = ["rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger", "time_trigger"] }
log = "0.4"
env_logger = "0.11"

# Cross-thread channels (faster & more ergonomic than std::sync::mpsc)
crossbeam-channel = "0.5"

# Home directory detection for the default config path
dirs = "6"

# Open URLs in the default browser (used for Discord OAuth)
open = "5"
tiny_http = "0.12.0"

# Windows registry (launch at startup)
winreg = "0.52"
serde_json = "1.0.149"

semver = "1.0.27"

# Embeds the Windows application manifest (no-console + DPI awareness).
# Only used during the build step on Windows hosts.
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"       # Optimize for binary size
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for best optimization
strip = true          # Strip debug symbols
panic = "abort"       # Smaller panic handler

[package.metadata.packager]
product_name = "Erdos Auto Uploader"
identifier = "com.erdosgaming.auto-uploader"
description = "Zero-idle-CPU Rocket League replay uploader"
long_description = "Automatically uploads your Rocket League replays to the Erdos performance service the moment they're saved."
publisher = "Shapley Technologies, Inc"
license_file = "LICENSE"
icons = ["assets/erdos_alpha.ico", "assets/erdos_alpha.png"]

formats = ["nsis"]

# [package.metadata.packager.nsis]
# preinstall-section = """
# Section KillRunning
#   StrCmp $CMDLINE "/S" 0 skip_kill
#     nsExec::Exec 'taskkill /F /IM erdos-auto-uploader.exe'
#     Sleep 500
#   skip_kill:
# SectionEnd
# """
